Removed root height to fix layout issues in Admin view

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
   margin: 0;
   width: 100vw ;
 }
